Bump AGH to v0.107.26 (#8)
