# internal/adguard/gen/model_blocked_services_all.go
@@ -1,0 +1,108 @@
+/*
+AdGuard Home
+
+AdGuard Home REST-ish API.  Our admin web interface is built on top of this REST-ish API. 
+
+API version: 0.107
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package adguard
+
+import (
+	"encoding/json"
+)
+
+// BlockedServicesAll struct for BlockedServicesAll
+type BlockedServicesAll struct {
+	BlockedServices []BlockedService `json:"blocked_services"`
+}
+
+// NewBlockedServicesAll instantiates a new BlockedServicesAll object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewBlockedServicesAll(blockedServices []BlockedService) *BlockedServicesAll {
+	this := BlockedServicesAll{}
+	this.BlockedServices = blockedServices
+	return &this
+}
+
+// NewBlockedServicesAllWithDefaults instantiates a new BlockedServicesAll object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewBlockedServicesAllWithDefaults() *BlockedServicesAll {
+	this := BlockedServicesAll{}
+	return &this
+}
+
+// GetBlockedServices returns the BlockedServices field value
+func (o *BlockedServicesAll) GetBlockedServices() []BlockedService {
+	if o == nil {
+		var ret []BlockedService
+		return ret
+	}
+
+	return o.BlockedServices
+}
+
+// GetBlockedServicesOk returns a tuple with the BlockedServices field value
+// and a boolean to check if the value has been set.
+func (o *BlockedServicesAll) GetBlockedServicesOk() ([]BlockedService, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.BlockedServices, true
+}
+
+// SetBlockedServices sets field value
+func (o *BlockedServicesAll) SetBlockedServices(v []BlockedService) {
+	o.BlockedServices = v
+}
+
+func (o BlockedServicesAll) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if true {
+		toSerialize["blocked_services"] = o.BlockedServices
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableBlockedServicesAll struct {
+	value *BlockedServicesAll
+	isSet bool
+}
+
+func (v NullableBlockedServicesAll) Get() *BlockedServicesAll {
+	return v.value
+}
+
+func (v *NullableBlockedServicesAll) Set(val *BlockedServicesAll) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableBlockedServicesAll) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableBlockedServicesAll) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableBlockedServicesAll(val *BlockedServicesAll) *NullableBlockedServicesAll {
+	return &NullableBlockedServicesAll{value: val, isSet: true}
+}
+
+func (v NullableBlockedServicesAll) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableBlockedServicesAll) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
